- java 9 update - java 10 addition - switching to java 19 sdk